# KEIJUKAMAT

./: .gitignore  README.md  env.example  index.html  plan.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: keijukamat_clean.yml
DOCS/: konseptikeiju-20260118_151304.md
KEIJUKAMAT_CLEANER/: README.md  clean_keijukamat.py
archive/: index.json
devlog/: DEVLOG.md
prompts/ad/: brand_adaptation.md  onepager_image_template.md  onepager_philosophy.md  prompt_builder.md  system.md
prompts/creative/: concept_format.md  concept_generation.md  refinement.md  self_critique.md  system.md  treatment_generation.md
prompts/producer/: pitch_email.md  quality_gates.md  strategize.md
prompts/research/: PROMPT_GUIDE.md  deep_research_query.md  deep_research_query_v2.md  diagnostic_framework.md  system.md
runs/: .gitkeep
schemas/: concept.schema.json  concept_brief.schema.json  onepager_spec.schema.json  run_state.schema.json  strategic_dossier.schema.json
scripts/: run_onepagers_from_treatments.py  run_treatments_from_raw.py  test_creative.py  test_research.py
src/: __init__.py  main.py
src/bots/: __init__.py
src/core/: __init__.py  config.py  filesystem.py  formatters.py  logger.py  models.py  prompt_logger.py  state.py  validators.py
src/integrations/: __init__.py
src/orchestrator/: __init__.py  pitch_composer.py  producer.py  quality_gates.py  state_machine.py  (+1 more)
tests/: __init__.py  conftest.py  test_creative_bot.py  test_models.py  test_orchestrator.py  test_research_bot.py
web/: config.js  index.html  status.html
(+1177 files in other folders)
